[tool.poetry]
name = "web-homework08"
version = "0.1.0"
description = ""
authors = ["Roman-Braneshty <102828727+Roman-Braneshty@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^14.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
